--- a/__tests__/gui/translation/themes.json
+++ b/__tests__/gui/translation/themes.json
@@ -56,7 +56,8 @@
     "name": "Higher Education",
     "icon": "account_balance",
     "order": 10,
-    "profile": 8
+    "profile": 8,
+    "color": "#22a6b3"
   },
   {
     "id": 7,
@@ -121,6 +122,7 @@
     "name": "Labour",
     "icon": "work",
     "order": 14,
-    "profile": 8
+    "profile": 8,
+    "color": "#22a6b3"
   }
 ]
